--- a/Portfolio/Aboutme.html
+++ b/Portfolio/Aboutme.html
@@ -23,7 +23,7 @@
 					<li>I secretly want to learn how to be a traditional cartographer.</li>
 					<li>I am terribly afraid of flying.</li>
 
-				<img src="http://www.clker.com/cliparts/5/H/e/5/F/j/sun-rise-hi.png" align="center">
+				<center><img src="http://www.clker.com/cliparts/5/H/e/5/F/j/sun-rise-hi.png"></center>
 
 			</body>
 
