--- a/portfolio/portfolio-final/index.html
+++ b/portfolio/portfolio-final/index.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html>
 <head>
+	<title>Zac C. Raslan</title>
 	<meta charset="utf-8">
 	<link href="css/reset.css" rel="stylesheet"></link>
 	<link href="css/style.css" rel="stylesheet"></link>
-	<!-- insert google fonts link here -->
+	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,900italic,700,300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 	<nav class="portfolio-navigation">
 		<ul class="navigation-menu">
 			<li class="navigation-item">
-				<a class="navigation-link" href="index.html">Home</a>
+				<a class="navigation-link selected" href="index.html">Home</a>
 			</li>
 			
 			<li class="navigation-item">
@@ -28,15 +29,17 @@
 		</ul>
 	</nav>
 	
-	<div class="portfolio-container">
+	<h1>Zachary C. Raslan</h1>
+
+		<div class="log-divider">. . .</div>
+
+	<div class="index-container">
 		
-
-
-
-
-
-
-
+		<div></div>
+	
 	</div>
+
+	<footer>Last edited by Zachary C. Raslan : November 28, 2015</footer>
+
 </body>
 </html>
