--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
 <head>
+	<title>ZCR Projects</title>
 	<meta charset="utf-8">
 	<link href="../css/reset.css" rel="stylesheet"></link>
 	<link href="../css/style.css" rel="stylesheet"></link>
-	<!-- insert google fonts link here -->
+	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,900italic,700,300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -17,26 +18,25 @@
 			<li class="navigation-item">
 				<a class="navigation-link" href="../bio.html">Bio</a>
 			</li>
-			
+
 			<li class="navigation-item">
 				<a class="navigation-link" href="../resume.html">Resume</a>
 			</li>
 			
 			<li class="navigation-item">
-				<a class="navigation-link" href="projects-folder/projects.html">Projects</a>
+				<a class="navigation-link selected" href="../projects-folder/projects.html">Projects</a>
 			</li>
 		</ul>
 	</nav>
 	
 	<div class="portfolio-container">
 		
-
-
-
-
-
+		<h2>History and GIS</h2>
 
 
 	</div>
+
+	<footer>Last edited by Zachary C. Raslan : November 28, 2015</footer>
+
 </body>
 </html>
