--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
 <head>
+	<title>ZCR Resume</title>
 	<meta charset="utf-8">
 	<link href="css/reset.css" rel="stylesheet"></link>
 	<link href="css/style.css" rel="stylesheet"></link>
-	<!-- insert google fonts link here -->
+	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,900italic,700,300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -17,9 +18,9 @@
 			<li class="navigation-item">
 				<a class="navigation-link" href="bio.html">Bio</a>
 			</li>
-			
+
 			<li class="navigation-item">
-				<a class="navigation-link" href="resume.html">Resume</a>
+				<a class="navigation-link selected" href="resume.html">Resume</a>
 			</li>
 			
 			<li class="navigation-item">
@@ -30,13 +31,12 @@
 	
 	<div class="portfolio-container">
 		
-
-
-
-
-
+		<h2>Resume</h2>
 
 
 	</div>
+
+	<footer>Last edited by Zachary C. Raslan : November 28, 2015</footer>
+
 </body>
 </html>
