--- a/portfolio/portfolio-final/index.html
+++ b/portfolio/portfolio-final/index.html
@@ -31,11 +31,12 @@
 	
 	<h1>Zachary C. Raslan</h1>
 
-		<div class="log-divider">. . .</div>
+<div class="log-divider">. . .</div>
 
 	<div class="index-container">
 		
-		<div></div>
+		<div>
+		</div>
 	
 	</div>
 
