--- a/portfolio/portfolio-final/index.html
+++ b/portfolio/portfolio-final/index.html
@@ -35,7 +35,10 @@
 
 	<div class="index-container">
 		
-		<div>
+		<div class="index-content-left">
+		</div>
+
+		<div class="index-content-right">
 		</div>
 	
 	</div>
