--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -33,6 +33,55 @@
 		
 		<h2>History and GIS</h2>
 
+		<ul>
+
+			<li class="project-link">
+
+				<a href="cliography-poster.pdf">Cliography Poster</a>
+				
+			</li>
+
+			<li class="project-content">
+
+				<p>The University of Connecticut hosts an annual poster exhibition of undergraduate research, scholarship, and creative projects. Frontiers is a chance for students to share their work with the UConn community and with visitors to campus (<span><a href="http://ugradresearch.uconn.edu/frontiers-in-undergraduate-research/">UConn Frontiers</a></span>).</p>
+
+				<p>I presented research material from my IDEA Grant; I focused on research findings and methodology of Historical GIS case study.</p>
+			
+			</li>
+
+			<li class="project-link">
+
+				<a href="honors-thesis.pdf">Honors Thesis (Under Edit)</a>
+
+			</li>
+
+			<li class="project-content">
+
+				<p>My undergraduate capstone project is a thesis which aims to explore a variety of Geographic Information Systems (GIS) Analysis-based methods to incorporate in historical scholarship. Cliography is essentially a synthesis of these methods and historical research wherein GIS is an integral of historical research/scholarship. Research methodologies included:</p>
+
+				<p>Virtual Hartford / MAGIC / CTSDA: I initially got involved with spatial analytics and ArcGIS software as a part of joining the Virtual Hartford research team. For this digital humanities historical research project my particular focus was on mapping Hartford History. As an intern at the UConn Libraries Map and Geographic Information Center and Connecticut State Data Center, I georeferenced and geoprocessed 19th and 20th century maps of Hartford, CT. A particular microhistory which this research has been helpful for was trying to identify population trends with a focus on children and spatial relation to near-by parks. I created shapefiles of the parks and 1909 voting ward districts to be able to develop databases that can analyze and map trends or patterns of this historical data.</p>
+
+				<p>UConn IDEA Grant: UConn IDEA Grant committee awarded me an undergraduate research grant to fund my self-developed, self-directed project. For this research, I developed a methodology (Cliography) for obtaining, digitizing and geoprocessing historical maps and census data to identify boundary and population dynamics, characteristics, and development ranging from ca 1640 to present day. The end goal of this project is to provide researchers of historic Hartford, CT databases of Cliographic data.</p>
+
+				<p>Office of the State Archeologist: After speaking with the Connecticut State Archeologist, we agreed that I would help him by developing an online GIS to map and store the data of the office of the CT State Archeologist. This project inspired a Cliographic method which utilizes online mapping platforms with exceptional interface qualities that simultaneously allow me to update, maintain and publically display data.</p>
+
+			</li>
+
+			<li class="project-link">Text goes here
+			</li>
+
+			<li class="project-content">text goes here
+			</li>
+
+			<li class="project-link">Text goes here
+			</li>
+		
+			<li class="project-content">text goes here
+			</li>
+
+		</ul>
+
+
 
 	</div>
 
