--- a/portfolio/portfolio-final/index.html
+++ b/portfolio/portfolio-final/index.html
@@ -36,9 +36,15 @@
 	<div class="index-container">
 		
 		<div class="index-content-left">
+
+			<p>Text Here</p>
+
 		</div>
 
 		<div class="index-content-right">
+
+			<p>Text Here</p>
+
 		</div>
 	
 	</div>
