--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -33,6 +33,9 @@
 		
 		<h2>History and GIS</h2>
 
+		<h3>Cliography</h3>
+		<hr>
+		
 		<ul>
 
 			<li class="project-link">
@@ -79,11 +82,24 @@
 
 			</li>
 
-			<li class="project-link">Text goes here
+			<li class="project-link">
+
+				<a href="osa-webpage-example.pdf">Office of the State Archeologist Webpage Example</a>
+
 			</li>
 		
-			<li class="project-content">text goes here
+			<li class="project-content">
+
+				<p>Office of the State Archeologist: After speaking with the Connecticut State Archeologist, we agreed that I would help him by developing an online GIS to map and store the data of the office of the CT State Archeologist. This project inspired a Cliographic method which utilizes online mapping platforms with exceptional interface qualities that simultaneously allow me to update, maintain and publically display data.</p>
+
 			</li>
+
+		</ul>
+
+		<h3>GIS Course Work Examples</h3>
+		<hr>
+
+		<ul>
 
 			<li class="project-link">Text goes here
 			</li>
