--- a/portfolio/portfolio-final/index.html
+++ b/portfolio/portfolio-final/index.html
@@ -34,16 +34,20 @@
 <div class="log-divider">. . .</div>
 
 	<div class="index-container">
-		
-		<div class="index-content-left">
 
-			<p>Text Here</p>
+		<div class="index-content-top">
+
+			<p>Please feel free to contact me by email at:</p>
+
+			<p><span class="index-email">zachary.raslan.1@gmail.com</span></p>
 
 		</div>
+		
+		<div class="index-content-bottom">
 
-		<div class="index-content-right">
+			<p>My academic interests include digital Humanities history, Historical Geography, GIS, Historical GIS, Cliography, Cartography Pre/Ancient/Classical history, Cultural history, history of religion and effect on social development with a focus on history of Graeco-Arabic Translation Movement (2CE – 10CE)</p>
 
-			<p>Text Here</p>
+			<p>My recreational interests include Fishing, hiking, camping, wood-working, metal-working; Music: drums, trumpet, guitar, banjo, harmonica, mouth harp, tin whistle; Martial arts: Brazilian Jiu-Jitsu, Krav-Maga, And Tae Kwon Do</p>
 
 		</div>
 	
