--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -35,7 +35,7 @@
 
 		<h3>Cliography</h3>
 		<hr>
-		
+
 		<ul>
 
 			<li class="project-link">
@@ -101,16 +101,164 @@
 
 		<ul>
 
-			<li class="project-link">Text goes here
+			<li class="project-link">
+
+				<a href="coursework-attribute-spatial-query.pdf">Attribute and Spatial Query</a>
+
 			</li>
 		
-			<li class="project-content">text goes here
+			<li class="project-content">
+
+				<p>This GIS course work exhibits attribute and spatial query examples.</p>
+
 			</li>
 
-			<li class="project-link">Text goes here
+			<li class="project-link">
+
+				<a href="coursework-creating-editing-GISfiles.pdf">Creating and Editing GIS Files</a>
+
 			</li>
 		
-			<li class="project-content">text goes here
+			<li class="project-content">
+
+				<p>This GIS course work exhibits GIS files creation and editing examples.</p>
+
+			</li>
+
+			<li class="project-link">
+
+				<a href="coursework-environmental-suitability-analysis.pdf">Environmental Suitability Analysis</a>
+
+			</li>
+		
+			<li class="project-content">
+
+				<p>This GIS course work exhibits environmental suitability analysis examples.</p>
+
+			</li>
+
+			<li class="project-link">
+
+				<a href="coursework-environmental-suitability-analysis2.pdf">Environmental Suitability Analysis (2)</a>
+
+			</li>
+		
+			<li class="project-content">
+
+				<p>This GIS course work exhibits another set of environmental suitability analysis examples.</p>
+
+			</li>
+
+			<li class="project-link">
+
+				<a href="coursework-final.pdf">Map and Graph of Business Revenue</a>
+
+			</li>
+		
+			<li class="project-content">
+
+				<p>This GIS course work example was a final for one of my classes where in I created a map and graph based on example GIS data.</p>
+
+			</li>
+
+			<li class="project-link">
+
+				<a href="coursework-geocoding.pdf">GeoCoding</a>
+
+			</li>
+		
+			<li class="project-content">
+
+				<p>This GIS course work exhibits a Geocoding example.</p>
+
+			</li>
+
+			<li class="project-link">
+
+				<a href="coursework-geographic-visualization.pdf">Geographic Data Visualization</a>
+
+			</li>
+		
+			<li class="project-content">
+
+				<p>This GIS course work exhibits a geographic data visualization example.</p>
+
+			</li>
+
+			<li class="project-link">
+
+				<a href="coursework-network-analysis.pdf">Network Analysis</a>
+
+			</li>
+		
+			<li class="project-content">
+
+				<p>This GIS course work exhibits a network analysis example.</p>
+
+			</li>
+
+			<li class="project-link">
+
+				<a href="coursework-workflow.pdf">Workflow for Environmental Suitability Analysis</a>
+
+			</li>
+		
+			<li class="project-content">
+
+				<p>This GIS course work exhibits a workflow example for environmental suitability analysis.</p>
+
+			</li>
+
+		</ul>
+
+	<h3>Historical Analysis Examples</h3>
+	<hr>
+
+		<ul>
+
+			<li class="project-link">
+
+				<a href="history-buddhism.pdf">Buddhism During Vietnam War</a>
+
+			</li>
+		
+			<li class="project-content">
+			</li>
+
+			<li class="project-link">
+
+				<a href="history-france-disunity.pdf">The Dividing Effects of Unification in Modern France</a>
+
+			</li>
+		
+			<li class="project-content">
+			</li>
+
+			<li class="project-link">
+
+				<a href="history-france-justice.pdf">Civilized Slavery in France: 1755-1820</a>
+
+			</li>
+		
+			<li class="project-content">
+			</li>
+
+			<li class="project-link">
+
+				<a href="history-patriotic-language.pdf">Patriotic Language and French National Unity: 1898-1915</a>
+
+			</li>
+		
+			<li class="project-content">
+			</li>
+
+			<li class="project-link">
+
+				<a href="history-sigmund.pdf">Sigmund Freud and the Masculinity of Human Sexuality</a>
+
+			</li>
+		
+			<li class="project-content">
 			</li>
 
 		</ul>
