--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -109,6 +109,12 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
+							<strong>Intern at Redniss and Mead Land Use Consulting Firm</strong>
+								<div>09/2015 - present</div>
+								<ul>
+									<li class="resume-list">Worked in the Land Use and Planning Department on projects contracted by various types of cliental</li>
+									<li class="resume-list">Utilized GIS to create maps of property with accompanying research</li>
+									<li class="resume-list">Researched land records and regulations pertinent to the properties in effort to draft regulation variances or project proposals</li>
 							<strong>Honors History Thesis:</strong>
 								<div>05/2014 – 05/2015</div>
 								<ul>
@@ -171,8 +177,8 @@
 
 					<section>
 						<h2 class="resume-headline">Interests and Activities</h2>
-							<strong>History</strong>
-								<p class="resume-list">Digital Humanities history, Historical Geography, Historical GIS, Cliography, Pre/Ancient/Classical history, Cultural history, history of religion and effect on social development with a focus on history of Graeco-Arabic Translation Movement (2CE – 10CE)</p>
+							<strong>Academic</strong>
+								<p class="resume-list">Digital Humanities history, Historical Geography, GIS,  Historical GIS, Cliography, Cartography,  Pre/Ancient/Classical history, Cultural history, history of religion and effect on social development with a focus on history of Graeco-Arabic Translation Movement (2CE – 10CE)</p>
 							<strong>Recreational</strong>
 								<p class="resume-list">Crafts and outdoors: Fishing, hiking, camping, wood-working, metal-working; Music: drums, trumpet, guitar, banjo, harmonica, mouth harp, tin whistle; Martial arts: Brazilian Jiu-Jitsu, Krav-Maga, And Tae Kwon Do</P>
 					</section>
