--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -103,6 +103,42 @@
 
 			<li class="project-link">
 
+				<a href="coursework-campaign-strategizing.pdf">Mapping Democratic Campaign Strategy for 2016 Presidential Election</a>
+
+			</li>
+
+			<li class="project-content">
+
+				<p>This GIS course work is an example of geospatial data analysis for campaign strategy purposes. This GIS analysis can be compared to location intelligence.</p>
+
+			</li>
+
+			<li class="project-link">
+
+				<a href="coursework-collecting-and-overlaying-data.jpg">Collecting, Overlaying, and Mapping Geospatial Data (Cali, USA Region)</a>
+
+			</li>
+
+			<li class="project-content">
+
+				<p>This GIS course work is an example of GIS mapping of data, focusing on the geographic area of the San Francisco.</p>
+
+			</li>
+
+			<li class="project-link">
+
+				<a href="coursework-collecting-and-overlaying-data2.jpg">Collecting, Overlaying, and Mapping Geospatial Data (World Wide)</a>
+
+			</li>
+
+			<li class="project-content">
+
+				<p>This GIS course work is an exmaple of GIS mapping of data, focusing on a World Wide scale.</p>
+
+			</li>
+
+			<li class="project-link">
+
 				<a href="coursework-attribute-spatial-query.pdf">Attribute and Spatial Query</a>
 
 			</li>
