--- a/portfolio/portfolio-final/index.html
+++ b/portfolio/portfolio-final/index.html
@@ -47,7 +47,7 @@
 
 			<p>My academic interests include digital Humanities history, Historical Geography, GIS, Historical GIS, Cliography, Cartography Pre/Ancient/Classical history, Cultural history, history of religion and effect on social development with a focus on history of Graeco-Arabic Translation Movement (2CE – 10CE)</p>
 
-			<p>My recreational interests include Fishing, hiking, camping, wood-working, metal-working; Music: drums, trumpet, guitar, banjo, harmonica, mouth harp, tin whistle; Martial arts: Brazilian Jiu-Jitsu, Krav-Maga, And Tae Kwon Do</p>
+			<p>My recreational interests include fishing, hiking, camping, wood-working, metal-working; music: drums, trumpet, guitar, banjo, harmonica, mouth harp, tin whistle; martial arts: Brazilian Jiu-Jitsu, Krav-Maga, And Tae Kwon Do</p>
 
 		</div>
 	
