--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -40,13 +40,13 @@
 
 			<li class="project-link">
 
-				<a href="cliography-poster.pdf">Cliography Poster</a>
+				<a href="cliography-poster.pdf" target="_blank">Cliography Poster</a>
 				
 			</li>
 
 			<li class="project-content">
 
-				<p>The University of Connecticut hosts an annual poster exhibition of undergraduate research, scholarship, and creative projects. Frontiers is a chance for students to share their work with the UConn community and with visitors to campus (<span><a href="http://ugradresearch.uconn.edu/frontiers-in-undergraduate-research/">UConn Frontiers</a></span>).</p>
+				<p>The University of Connecticut hosts an annual poster exhibition of undergraduate research, scholarship, and creative projects. Frontiers is a chance for students to share their work with the UConn community and with visitors to campus (<span><a href="http://ugradresearch.uconn.edu/frontiers-in-undergraduate-research/" target="_blank">UConn Frontiers</a></span>).</p>
 
 				<p>I presented research material from my IDEA Grant; I focused on research findings and methodology of Historical GIS case study.</p>
 			
@@ -54,7 +54,7 @@
 
 			<li class="project-link">
 
-				<a href="honors-thesis.pdf">Honors Thesis (Under Edit)</a>
+				<a href="honors-thesis.pdf" target="_blank">Honors Thesis (Under Edit)</a>
 
 			</li>
 
@@ -72,7 +72,7 @@
 
 			<li class="project-link">
 
-				<a href="GeoMorph_Project.jpg">Geomorphology Project</a>
+				<a href="GeoMorph_Project.jpg" target="_blank">Geomorphology Project</a>
 
 			</li>
 
@@ -84,7 +84,7 @@
 
 			<li class="project-link">
 
-				<a href="osa-webpage-example.pdf">Office of the State Archeologist Webpage Example</a>
+				<a href="osa-webpage-example.pdf" target="_blank">Office of the State Archeologist Webpage Example</a>
 
 			</li>
 		
@@ -103,7 +103,7 @@
 
 			<li class="project-link">
 
-				<a href="coursework-campaign-strategizing.pdf">Mapping Democratic Campaign Strategy for 2016 Presidential Election</a>
+				<a href="coursework-campaign-strategizing.pdf" target="_blank">Mapping Democratic Campaign Strategy for 2016 Presidential Election</a>
 
 			</li>
 
@@ -115,7 +115,7 @@
 
 			<li class="project-link">
 
-				<a href="coursework-collecting-and-overlaying-data.jpg">Collecting, Overlaying, and Mapping Geospatial Data (Cali, USA Region)</a>
+				<a href="coursework-collecting-and-overlaying-data.jpg" target="_blank">Collecting, Overlaying, and Mapping Geospatial Data (Cali, USA Region)</a>
 
 			</li>
 
@@ -127,7 +127,7 @@
 
 			<li class="project-link">
 
-				<a href="coursework-collecting-and-overlaying-data2.jpg">Collecting, Overlaying, and Mapping Geospatial Data (World Wide)</a>
+				<a href="coursework-collecting-and-overlaying-data2.jpg" target="_blank">Collecting, Overlaying, and Mapping Geospatial Data (World Wide)</a>
 
 			</li>
 
@@ -139,7 +139,7 @@
 
 			<li class="project-link">
 
-				<a href="coursework-attribute-spatial-query.pdf">Attribute and Spatial Query</a>
+				<a href="coursework-attribute-spatial-query.pdf" target="_blank">Attribute and Spatial Query</a>
 
 			</li>
 		
@@ -151,7 +151,7 @@
 
 			<li class="project-link">
 
-				<a href="coursework-creating-editing-GISfiles.pdf">Creating and Editing GIS Files</a>
+				<a href="coursework-creating-editing-GISfiles.pdf" target="_blank">Creating and Editing GIS Files</a>
 
 			</li>
 		
@@ -163,7 +163,7 @@
 
 			<li class="project-link">
 
-				<a href="coursework-environmental-suitability-analysis.pdf">Environmental Suitability Analysis</a>
+				<a href="coursework-environmental-suitability-analysis.pdf" target="_blank">Environmental Suitability Analysis</a>
 
 			</li>
 		
@@ -175,7 +175,7 @@
 
 			<li class="project-link">
 
-				<a href="coursework-environmental-suitability-analysis2.pdf">Environmental Suitability Analysis (2)</a>
+				<a href="coursework-environmental-suitability-analysis2.pdf" target="_blank">Environmental Suitability Analysis (2)</a>
 
 			</li>
 		
@@ -187,7 +187,7 @@
 
 			<li class="project-link">
 
-				<a href="coursework-final.pdf">Map and Graph of Business Revenue</a>
+				<a href="coursework-final.pdf" target="_blank">Map and Graph of Business Revenue</a>
 
 			</li>
 		
@@ -199,7 +199,7 @@
 
 			<li class="project-link">
 
-				<a href="coursework-geocoding.pdf">GeoCoding</a>
+				<a href="coursework-geocoding.pdf" target="_blank">GeoCoding</a>
 
 			</li>
 		
@@ -211,7 +211,7 @@
 
 			<li class="project-link">
 
-				<a href="coursework-geographic-visualization.pdf">Geographic Data Visualization</a>
+				<a href="coursework-geographic-visualization.pdf" target="_blank">Geographic Data Visualization</a>
 
 			</li>
 		
@@ -223,7 +223,7 @@
 
 			<li class="project-link">
 
-				<a href="coursework-network-analysis.pdf">Network Analysis</a>
+				<a href="coursework-network-analysis.pdf" target="_blank">Network Analysis</a>
 
 			</li>
 		
@@ -235,7 +235,7 @@
 
 			<li class="project-link">
 
-				<a href="coursework-workflow.pdf">Workflow for Environmental Suitability Analysis</a>
+				<a href="coursework-workflow.pdf" target="_blank">Workflow for Environmental Suitability Analysis</a>
 
 			</li>
 		
@@ -254,7 +254,7 @@
 
 			<li class="project-link">
 
-				<a href="history-buddhism.pdf">Buddhism During Vietnam War</a>
+				<a href="history-buddhism.pdf" target="_blank">Buddhism During Vietnam War</a>
 
 			</li>
 		
@@ -263,7 +263,7 @@
 
 			<li class="project-link">
 
-				<a href="history-france-disunity.pdf">The Dividing Effects of Unification in Modern France</a>
+				<a href="history-france-disunity.pdf" target="_blank">The Dividing Effects of Unification in Modern France</a>
 
 			</li>
 		
@@ -272,7 +272,7 @@
 
 			<li class="project-link">
 
-				<a href="history-france-justice.pdf">Civilized Slavery in France: 1755-1820</a>
+				<a href="history-france-justice.pdf" target="_blank">Civilized Slavery in France: 1755-1820</a>
 
 			</li>
 		
@@ -281,7 +281,7 @@
 
 			<li class="project-link">
 
-				<a href="history-patriotic-language.pdf">Patriotic Language and French National Unity: 1898-1915</a>
+				<a href="history-patriotic-language.pdf" target="_blank">Patriotic Language and French National Unity: 1898-1915</a>
 
 			</li>
 		
@@ -290,7 +290,7 @@
 
 			<li class="project-link">
 
-				<a href="history-sigmund.pdf">Sigmund Freud and the Masculinity of Human Sexuality</a>
+				<a href="history-sigmund.pdf" target="_blank">Sigmund Freud and the Masculinity of Human Sexuality</a>
 
 			</li>
 		
