--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -50,7 +50,7 @@
 							<strong>University of Connecticut</strong>
 								<ul>
 									<li class="resume-list">Bachelor of Arts and Sciences in History, Geographic Information Systems (GIS) minor</li>
-									<li class="resume-list">Expected Graduation Fall 2015</li>
+									<li class="resume-list">Graduated Fall 2015</li>
 								</ul>
 							<strong>University of Vermont</strong>
 								<ul>
@@ -59,6 +59,7 @@
 							<strong>Westhill High School</strong>
 								<ul>
 									<li class="resume-list">Diploma: 2011</li>
+									<li class="resume-list">•	Member and graduate of the Academy of Finance: Member of the Future Business Leaders of America (FBLA)</li>
 								</ul>
 					</section>
 
@@ -68,7 +69,7 @@
 						<h2 class="resume-headline">Honors</h2>
 							<strong>University of Connecticut</strong>
 								<ul>
-									<li class="resume-list">University of Connecticut Honors Scholar Program: <span>Admitted March, 2014</span></li>
+									<li class="resume-list">University of Connecticut Honors Scholar Program: <span>March, 2014 - December, 2015</span></li>
 									<li class="resume-list">Phi Alpha Theta History Honors Society: <span>Inducted May, 2014</span></li>
 								</ul>
 					</section>
@@ -81,6 +82,9 @@
 								<ul>
 									<li class="resume-list">Awarded scholarship for demonstrating an interest in music and having a record of academic achievement</li>
 								</ul>
+							<strong>O.U.R. Travel to Present Research Award</strong>
+								<ul>
+									<li class="resume-list">Awarded grant funding travel to present research at the Association for the Study of Connecticut History (ASCH) Conference: Fairfield University (April 5, 2014)</li>
 							<strong>IDEA Grant Recipient</strong>
 								<ul>
 									<li class="resume-list">Awarded competitive grant to fund self-directed and self-developed research regarding digitization and Historical GIS</li>
@@ -110,7 +114,7 @@
 					<section>
 						<h2 class="resume-headline">Experience</h2>
 							<strong>Intern at Redniss and Mead Land Use Consulting Firm</strong>
-								<div>09/2015 - present</div>
+								<div>09/2015 - 12/2015</div>
 								<ul>
 									<li class="resume-list">Worked in the Land Use and Planning Department on projects contracted by various types of cliental</li>
 									<li class="resume-list">Utilized GIS to create maps of property with accompanying research</li>
