--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -59,7 +59,7 @@
 							<strong>Westhill High School</strong>
 								<ul>
 									<li class="resume-list">Diploma: 2011</li>
-									<li class="resume-list">•	Member and graduate of the Academy of Finance: Member of the Future Business Leaders of America (FBLA)</li>
+									<li class="resume-list">Member and graduate of the Academy of Finance: Member of the Future Business Leaders of America (FBLA)</li>
 								</ul>
 					</section>
 
