--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -50,7 +50,7 @@
 							<strong>University of Connecticut</strong>
 								<ul>
 									<li class="resume-list">Bachelor of Arts and Sciences in History, Geographic Information Systems (GIS) minor</li>
-									<li class="resume-list">Graduated Fall 2015</li>
+									<li class="resume-list">Graduated: Fall 2015</li>
 								</ul>
 							<strong>University of Vermont</strong>
 								<ul>
