--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -60,7 +60,7 @@
 
 			<li class="project-content">
 
-				<p>My undergraduate capstone project is a thesis which aims to explore a variety of GIS (Geographic Information Systems) analysis-based methods and they could be incorporated in historical scholarship. Cliography is essentially a synthesis of these methods and historical research wherein GIS is an integral part of historical research/scholarship. These research methodologies were developed through projects including:</p>
+				<p>My undergraduate capstone project is a thesis which aims to explore a variety of GIS (Geographic Information Systems) analysis-based methods and how they could be incorporated in historical scholarship. Cliography is essentially a synthesis of these methods and historical research wherein GIS is an integral part of historical research/scholarship. These research methodologies were developed through projects including:</p>
 
 				<p>Virtual Hartford / MAGIC / CTSDA: I initially got involved with spatial analytics and ArcGIS software as a part of joining the Virtual Hartford research team. For this digital humanities historical research project my particular focus was on mapping Hartford History. As an intern at the UConn Libraries Map and Geographic Information Center and Connecticut State Data Center, I georeferenced and geoprocessed 19th and 20th century maps of Hartford, CT. A particular microhistory which this research has been helpful for was trying to identify population trends with a focus on children and spatial relation to near-by parks. I created shapefiles of the parks and 1909 voting ward districts to be able to develop databases that can analyze and map trends or patterns of this historical data.</p>
 
