--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -254,6 +254,12 @@
 
 			<li class="project-link">
 
+				<a href="history-radical-american-revolution.pdf" target="_blank">Three Tiers for the Radical American Revolution</a>
+
+			</li>
+
+			<li class="project-link">
+
 				<a href="history-buddhism.pdf" target="_blank">Buddhism During Vietnam War</a>
 
 			</li>
