--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -58,7 +58,7 @@
 								</ul>
 							<strong>Westhill High School</strong>
 								<ul>
-									<li class="resume-list">Diploma: 2011</li>
+									<li class="resume-list">Diploma: Spring 2011</li>
 									<li class="resume-list">Member and graduate of the Academy of Finance: Member of the Future Business Leaders of America (FBLA)</li>
 								</ul>
 					</section>
