--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -254,6 +254,18 @@
 
 			<li class="project-link">
 
+				<a href="history-Byzantium-neareast-imperial-christianity.pdf" target="_blank">Byzantium and Near East Imperial Christianity</a>
+
+			</li>
+
+			<li class="project-link">
+
+				<a href="history-Byzantium-neareast-political-military-econ.pdf" target="_blank">Byzantium - Dawn of the Middle Ages</a>
+
+			</li>
+
+			<li class="project-link">
+
 				<a href="history-radical-american-revolution.pdf" target="_blank">Three Tiers for the Radical American Revolution</a>
 
 			</li>
