--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -113,43 +113,51 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
+							<strong>Founded ClioGraphica, Location Intelligence Firm</strong>
+								<div>11/2015 - present</div>
+								<ul>
+									<li class="resume-list">Owner and Operator of ClioGraphica, a Location Intelligence Firm which aims to provide data digitization/creation, geospatial analysis, data storage (sale), and intelligence reports of client businesses or organizations</li>
+									<li class="resume-list">Develops Geodatabases for client use by GPS Data Collection Campaign or other available data sources that may already exist</li>
+									<li class="resume-list">Provide innovative geospatial services for a wide variety of clientele</li>
+								</ul>
 							<strong>Intern at Redniss and Mead Land Use Consulting Firm</strong>
 								<div>09/2015 - 12/2015</div>
 								<ul>
-									<li class="resume-list">Worked in the Land Use and Planning Department on projects contracted by various types of cliental</li>
+									<li class="resume-list">Worked in the Land Use and Planning Department on projects contracted by various types of clientele</li>
 									<li class="resume-list">Utilized GIS to create maps of property with accompanying research</li>
 									<li class="resume-list">Researched land records and regulations pertinent to the properties in effort to draft regulation variances or project proposals</li>
-							<strong>Honors History Thesis:</strong>
+								</ul>
+							<strong>Honors History Thesis</strong>
 								<div>05/2014 – 05/2015</div>
 								<ul>
 									<li class="resume-list">Developed a method for historical researchers to integrate Geographic Information Systems, open source software and program coding languages to aid in traditional historical enquiry</li>
 									<li class="resume-list">Utilized self-developed case study research material focused on Hartford, CT from 1648-1970s</li>
 								</ul>
-							<strong>Assistant to Connecticut State Archeologist:</strong>
+							<strong>Assistant to Connecticut State Archeologist</strong>
 							<div>09/2014 – 12/2014</div>
 								<ul>
 									<li class="resume-list">Utilized open source software to develop and design an online  GIS interface to house and map data of the Office of the State Archaeologist</li>
 									<li class="resume-list">Mapped Archeological data using Google Fusion Tables platform</li>
 								</ul>
-							<strong>Member of Geomorphology and Earth Processes Research Team led by Prof. Ouimet:</strong>
+							<strong>Member of Geomorphology and Earth Processes Research Team led by Prof. Ouimet</strong>
 								<div>06/10/2014 – 12/10/14</div>
 								<ul>
 									<li class="resume-list">Study the history, mechanics and evolution of landscapes at human timescales</li>
 									<li class="resume-list">Leveraged ArcGIS software and LiDAR data to construct Digital Elevation Models (DEMs) to identify, geoprocess and map charcoal hearths as part of an investigation pertaining to historical Connecticut geography</li>
 								</ul>
-							<strong>Student Administrator at Connecticut State Museum of Natural History:</strong>
+							<strong>Student Administrator at Connecticut State Museum of Natural History</strong>
 							<div>5/2014 – 5/2015</div>
 								<ul>
 									<li class="resume-list">Organized and maintaind museum files regarding different sponsored events</li>
 								</ul>
-							<strong>Census and Geospatial Data Assistant at University of Connecticut Libraries’ Maps and Geographic Information Center (MAGIC) and Connecticut State Data Center:</strong>
+							<strong>Census and Geospatial Data Assistant at University of Connecticut Libraries’ Maps and Geographic Information Center (MAGIC) and Connecticut State Data Center</strong>
 							<div>Intern 10/2013 – 12/2013; Employee 01/2014 – 6/2014</div>
 								<ul>
 									<li class="resume-list">Functioned as a GIS analyst in an office which contracted state-wide geospatial data projects</li>
 									<li class="resume-list">Used ArcGIS as GIS software; familiar with file sharing methods among multi-person GIS analyst teams</li>
 									<li class="resume-list">Utilized ArcGIS and census data to construct historical GISystems and maps for Virtual Hartford</li>
 								</ul>
-							<strong>Member of Virtual Hartford Research Team:</strong>
+							<strong>Member of Virtual Hartford Research Team</strong>
 							<div>10/2013 – present</div>
 								<ul>
 									<li class="resume-list">Functioned as a geographic information specialist for Virtual Hartford, a team of graduate and undergraduate students who are constructing an educational website dedicated to historical Hartford, CT</li> 
@@ -166,14 +174,14 @@
 
 					<section>
 						<h2 class="resume-headline">Computer Skills</h2>
-							<strong>Software Packages:</strong>
+							<strong>Software Packages</strong>
 								<ul>
 									<li class="resume-list">ArcGIS: 10.3; Adobe Photoshop; MS Office Suite 2013</li>
 								</ul>
 								<div></div>
-							<strong>Code Languages:</strong>
+							<strong>Code Languages</strong>
 								<ul>
-									<li class="resume-list">HTML, CSS, Python</li>
+									<li class="resume-list">HTML, CSS</li>
 								</ul>
 					</section>
 				
